--- a/arch/arm64/configs/lineageos_a37f_defconfig
+++ b/arch/arm64/configs/lineageos_a37f_defconfig
@@ -19,7 +19,7 @@ CONFIG_NAMESPACES=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+#CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_KALLSYMS_ALL=y
 CONFIG_EMBEDDED=y
@@ -598,3 +598,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+CONFIG_PGTABLE_MAPPING=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_QUICK_CHARGE=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
